force-app/main/default/objects/Co_Applicant__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <label>Aadhaar Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>