force-app/main/default/objects/Co_Applicant__c/fields/Annual_House_Hold_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_House_Hold_Income__c</fullName>
    <label>Annual House Hold Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 - 10 Lakhs</fullName>
            </value>
            <value>
                <fullName>10 - 20 Lakhs</fullName>
            </value>
            <value>
                <fullName>20 - 30 Lakhs</fullName>
            </value>
            <value>
                <fullName>30 - 50 Lakhs</fullName>
            </value>
            <value>
                <fullName>50 Lakhs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>