force-app/main/default/objects/Co_Applicant__c/fields/Communication_Address1__c.field-meta.xml
<CustomField>
    <fullName>Communication_Address1__c</fullName>
    <label>Communication Address</label>
    <type>Address</type>
</CustomField>