force-app/main/default/objects/Co_Applicant__c/fields/Country_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence__c</fullName>
    <label>Country of Residence</label>
    <length>120</length>
    <type>Text</type>
</CustomField>