force-app/main/default/objects/Co_Applicant__c/fields/Employeed_at__c.field-meta.xml
<CustomField>
    <fullName>Employeed_at__c</fullName>
    <label>Company/firm Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>