force-app/main/default/objects/Co_Applicant__c/fields/Office_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Office_Pincode__c</fullName>
    <label>Office Pincode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>