force-app/main/default/objects/Co_Applicant__c/fields/Other_Industry__c.field-meta.xml
<CustomField>
    <fullName>Other_Industry__c</fullName>
    <label>Other Industry</label>
    <length>120</length>
    <type>Text</type>
</CustomField>