force-app/main/default/objects/Co_Applicant__c/fields/Other_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Other_Qualification__c</fullName>
    <label>Other Qualification</label>
    <length>120</length>
    <type>Text</type>
</CustomField>