force-app/main/default/objects/Co_Applicant__c/fields/Permanent_Address1__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address1__c</fullName>
    <label>Permanent Address</label>
    <type>Address</type>
</CustomField>