force-app/main/default/objects/Co_Applicant__c/fields/Pincode_commmunication__c.field-meta.xml
<CustomField>
    <fullName>Pincode_commmunication__c</fullName>
    <label>Communication PinCode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>