force-app/main/default/objects/Co_Applicant__c/fields/Pincode_permanent__c.field-meta.xml
<CustomField>
    <fullName>Pincode_permanent__c</fullName>
    <label>Permanent Pincode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>