force-app/main/default/objects/Co_Applicant__c/fields/Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney__c</fullName>
    <label>Power of Attorney</label>
    <length>220</length>
    <type>Text</type>
</CustomField>