force-app/main/default/objects/Co_Applicant__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>M/s.</fullName>
            </value>
            <value>
                <fullName>Shri</fullName>
                <isActive>false</isActive>
                <label>Shri</label>
            </value>
            <value>
                <fullName>Smt</fullName>
                <isActive>false</isActive>
                <label>Smt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>