force-app/main/default/objects/Co_Applicant__c/validationRules/Adhar_12_Digit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Adhar_12_Digit_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Aadhar_Number__c)),
OR(
LEN(Aadhar_Number__c) &lt;&gt; 12,
NOT(REGEX(Aadhar_Number__c, &quot;^[0-9]{12}$&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>Aadhar_Number__c</errorDisplayField>
    <errorMessage>Please enter correct Aadhaar number</errorMessage>
</ValidationRule>