force-app/main/default/objects/Co_Applicant__c/validationRules/Date_of_Birth_Validaiton.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_Validaiton</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    /* Applicant is under 18 */
    ( TODAY() - Date_of_Birth__c ) / 365 &lt; 18,

    /* Then: POA fields must be filled AND POA must be adult */
    OR(
        ISBLANK(Power_of_Attorney__c),
        ISBLANK(Power_of_Attorney_DOB__c),
        ( TODAY() - Power_of_Attorney_DOB__c ) / 365 &lt; 18
    ),

    /* If applicant is 18+ → no error */
    FALSE
)</errorConditionFormula>
    <errorMessage>Please fill Power of Attorney Detail for Less than 18 age.</errorMessage>
</ValidationRule>