force-app/main/default/objects/Co_Applicant__c/validationRules/Marriage_Anniversary_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Marriage_Anniversary_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Marital_Status__c, &quot;Married&quot;),
    NOT(ISBLANK(Anniverssary_Date__c)),
    Anniverssary_Date__c &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Marital_Status__c</errorDisplayField>
    <errorMessage>Anniversary date cannot be in the future.</errorMessage>
</ValidationRule>