force-app/main/default/objects/Co_Applicant__c/validationRules/OtherIndustryValiidation.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherIndustryValiidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Industry__c,&apos;Other&apos;),
ISBLANK( Other_Industry__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Industry__c</errorDisplayField>
    <errorMessage>Fill Other fields when &apos;Other&apos; selected</errorMessage>
</ValidationRule>