force-app/main/default/objects/Co_Applicant__c/validationRules/PAN_No_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_No_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    REGEX(
        PAN_Number__c ,
        &quot;^[A-Z]{5}[0-9]{4}[A-Z]{1}$&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>PAN_Number__c</errorDisplayField>
    <errorMessage>Enter a valid PAN number (Format: ABCDE1234F).</errorMessage>
</ValidationRule>