force-app/main/default/objects/Co_Applicant__c/validationRules/Passport_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Passport_Number__c)),
  NOT(REGEX(UPPER(Passport_Number__c), &quot;^[A-Z]{1}[0-9]{7}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Passport_Number__c</errorDisplayField>
    <errorMessage>Enter a valid passport number (Format: A1234567).</errorMessage>
</ValidationRule>