force-app/main/default/objects/Co_Applicant__c/validationRules/Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    NOT(ISBLANK(Primary_Phone__c)) &amp;&amp;
    NOT(REGEX(Primary_Phone__c, &quot;^[0-9]{10}$&quot;)),

    NOT(ISBLANK(Alternate_Contact_No__c)) &amp;&amp;
    NOT(REGEX(Alternate_Contact_No__c, &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorMessage>Enter a valid 10-digit Primary Phone number.</errorMessage>
</ValidationRule>