force-app/main/default/objects/Co_Applicant__c/validationRules/Qualification_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualification_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Qualification__c, &apos;Other&apos;),
    ISBLANK(Other_Qualification__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Qualification__c</errorDisplayField>
    <errorMessage>Please enter Other Qualification</errorMessage>
</ValidationRule>