force-app/main/default/objects/Co_Applicant__c/validationRules/Spouse_DOB_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Spouse_DOB_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    ISBLANK(Spouse_Date_Of_Birth_coapp__c)
)
&amp;&amp;
(
    Spouse_Date_Of_Birth_coapp__c &gt; (TODAY() - (18 * 365))
)</errorConditionFormula>
    <errorMessage>Spouse DOB should be greater than 18</errorMessage>
</ValidationRule>