force-app/main/default/objects/Co_Applicant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Nationality__c</columns>
    <columns>Email__c</columns>
    <columns>Primary_Phone__c</columns>
    <columns>Industry__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>